[package]
name = "pgm"
version = "0.1.0"
edition = "2021"
authors = ["SOFe <sofe2038@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
colorgrad = "0.6.2"
crossterm = "0.27.0"
rand = "0.8.5"
